--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,24 @@
 ---
-title: "aiden-roach-portfolio"
+title: "Aiden Roach"
+about:
+  template: jolla
+  image: profile.jpeg
+  links:
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/aiden-roach-131302351/
+    - icon: github
+      text: Github
+      href: https://github.com/a-roach04
 ---
 
-This is a Quarto website.
+Aiden Roach is a student at California State University, Monterey Bay majoring in biology and double minoring in statistics and environmental science.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+## Education
+California State University, Monterey Bay | Seaside, CA | B.S. in Biology | 2022 - 2026
 
-```{r}
-1 + 1
-```
+## Experience
+
+Cooperative Learning Center | Front Desk Assistant | December 2022 - present       
+
+Department of Mathmatics and Statistics | Instructional Student Assistant | November 2023 - present
