Edited about me and cleaned some stuff up

--- a/index.qmd
+++ b/index.qmd
@@ -15,10 +15,11 @@ about:
 Aiden Roach is a student at California State University, Monterey Bay majoring in biology and double minoring in statistics and environmental science.
 
 ## Education
+
 California State University, Monterey Bay | Seaside, CA | B.S. in Biology | 2022 - 2026
 
 ## Experience
 
-Cooperative Learning Center | Front Desk Assistant | December 2022 - present       
+Cooperative Learning Center | Front Desk Assistant | December 2022 - present
 
-Department of Mathmatics and Statistics | Instructional Student Assistant | November 2023 - present
+Department of Mathematics and Statistics | Instructional Student Assistant | November 2023 - present
