--- a/about.qmd
+++ b/about.qmd
@@ -2,6 +2,8 @@
 title: "About"
 ---
 
-About this site
-
 Hi! My name is Aiden Roach and I am studying biology, statistics, and environmental science at California State University of Monterey Bay! After undergraduate school, I want to go to graduate school for a Ph.D. in ecology or population biology. For my career, I want to study the migration patterns of large mammals to make urban development friendlier towards our animal neighbors. Whenever I have free time, I like to go tidepooling, crochet, and watch romance movies with my cat Moose.
+
+![Me and my Moose!](me_n_moose.jpg)         
+
+![We stopped at Donner Pass on a cross-country roadtrip!](donner.jpg)
