--- a/index.qmd
+++ b/index.qmd
@@ -16,10 +16,14 @@ Aiden Roach is a student at California State University, Monterey Bay majoring i
 
 ## Education
 
-California State University, Monterey Bay | Seaside, CA | B.S. in Biology | 2022 - 2026
+California State University, Monterey Bay \| Seaside, CA \| B.S. in Biology \| 2022 - 2026
 
 ## Experience
 
-Cooperative Learning Center | Front Desk Assistant | December 2022 - present
+Cooperative Learning Center \| Front Desk Assistant \| December 2022 - present
 
-Department of Mathematics and Statistics | Instructional Student Assistant | November 2023 - present
+Department of Mathematics and Statistics \| Instructional Student Assistant \| November 2023 - present        
+
+California Marina State Beach \| Woodrat Nest Surveyor \| February 2025 - May 2025
+
+San Diego Zoo Wildlife Alliance \| Volunteer \| May 2025 - August 2025
