--- a/portfolio-project/example.qmd
+++ b/portfolio-project/example.qmd
@@ -23,7 +23,7 @@ The first graphic shows that there is some variation in average species richness
 #| fig-alt: "Column plot showing relationship between plant community and average species richness. Tamarack bog was the least diverse with an average species richness of about 0.5. Dry grassland was the most diverse with an average species richness of about 0.95."
 
 library(tidyverse) #load necessary package
-mammal_clean <- read_csv("data-clean/mammal_clean.csv") #read in data
+mammal_clean <- read_csv("portfolio-project/data-clean/mammal_clean.csv") #read in data
 
 mammal_clean |> #use mammal_clean data
   select(plantcomm, richness) |> #select these variables
